<resources>
    <string name="app_name">Solution</string>
    <string name="user">User</string>
    <string name="choose_client_type">Choose Client type</string>
    <string name="corporation">Corporation</string>
    <string name="e_mail">Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have account</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="login_as_an_user">Login as an User</string>
    <string name="login_as_a_corporation">Login as a Corporation</string>
    <string name="choose_profile_image">Choose profile image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="my_reports">My Reports</string>
    <string name="make_a_report">Make a Report</string>
    <string name="about_us">About Us</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="report_title">Report Title</string>
    <string name="report_description">Report Description</string>
    <string name="upload_report_image">Upload report image</string>
    <string name="complete_report_info">Complete Report Info</string>
    <string name="edit">Edit</string>
    <string name="my_points">My Points</string>
    <string name="corporation_name">Corporation Name</string>
    <string name="corporations">Corporations</string>
    <string name="select_the_corporation_please">Select the corporation, please</string>
    <string name="corporation_description">Corporation description</string>
    <string name="description">Description</string>
    <string name="welcome_to_solution">Welcome To Solution</string>
    <string name="register_new_user">Register New User</string>
    <string name="register_new_corporation">Register New Corporation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="share">Share</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="information">Information</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="mummies">Mummies</string>
    <string name="tourist_places">Tourist Places</string>
    <string name="error_In_Login">Error In Login</string>
    <string name="error_In_Register">Error In Register</string>
    <string name="required">Required</string>
    <string name="dont_match">Don\'t match</string>
    <string name="logout">Logout</string>
    <string name="error_In_add_report">Error in add report</string>
    <string name="success">success</string>
    <string name="no_results">No results</string>

</resources>