<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layoutAnimation="@anim/layout_animation"
            tools:context=".ui.user.UserHomeActivity">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/user_image"
                app:riv_corner_radius="@dimen/_35sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Welcome, Ahmed"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/profile"
                app:icon="@drawable/ic_outline_user"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/myReportsBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/my_reports"
                app:icon="@drawable/ic_baseline_list_alt_24"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/makeAReportBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/make_a_report"
                app:icon="@drawable/ic_baseline_report_problem_24"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aboutUsBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/about_us"
                app:icon="@drawable/ic_baseline_info_24"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/logout"
                app:icon="@drawable/ic_logout"
                app:iconGravity="textStart" />
        </LinearLayout>
    </ScrollView>

</layout>