<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layoutAnimation="@anim/layout_animation"
            tools:context=".ui.ChooseClientTypeActivity">
            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_client_type"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/userBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/user" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/corporationBtn"
                style="@style/ButtonOutlineWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/corporation" />
        </LinearLayout>
    </ScrollView>
</layout>