<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.elmoselhy.solution.base.BaseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/loading_layout"
            app:viewModel="@{viewModel}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layoutAnimation="@anim/layout_animation"
                android:orientation="vertical"
                tools:context=".ui.corporation.CorporationLoginActivity">

                <ImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_as_a_corporation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/stroke_rectangle_background_primary"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInput"
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInput"
                        style="@style/InputTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--                <TextView-->
                    <!--                    android:id="@+id/forgetPasswordTv"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:layout_gravity="end"-->
                    <!--                    android:padding="@dimen/_5sdp"-->
                    <!--                    android:text='@{@string/forget_password.concat("?")}'-->
                    <!--                    android:textColor="@color/text_color_grey"-->
                    <!--                    android:textSize="@dimen/_9sdp"-->
                    <!--                    android:visibility="gone"-->
                    <!--                    tools:text="@string/forget_password" />-->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/text_color_grey"
                            android:textSize="@dimen/_11sdp"
                            tools:text="@string/don_t_have_an_account" />

                        <TextView
                            android:id="@+id/registerTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/register"
                            android:textColor="@color/primary"
                            android:textSize="@dimen/_11sdp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginBtn"
                        style="@style/ButtonContainedPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/login" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>