<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/message_dialog_bg"
        android:padding="@dimen/_5sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:scaleType="fitXY"
                android:id="@+id/image"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_5sdp"
                />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="@color/text_color_grey"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:id="@+id/btn_container"
                >
                <Button
                    android:id="@+id/no_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/noBtn"
                    android:text="@string/no"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    />

                <Button
                    android:id="@+id/yes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:backgroundTint="@color/yesBtn"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</layout>